Mon Apr 18 04:45:24 2011  Keiju Ishitsuka  <keiju@ishitsuka.com>

	* fixnum-buffer.c: fairy_fixnum_buffer_free()でfb->fixunumsがNULL
	  の時の対応をした. fb->capaの設定をfairy_fixnum_buffer_alloc()から
	  fairy_fixnum_buffer_initializeに変更した.
	* p-group-by.c: rb_xmsb(_store_2ndmemory_obj)で余分なものを削除した.
	* p-xgroup-by.c: fairy_p_xgroup_by_mark()でマークをより厳密にチェッ
	  クするようにした. fairy_p_xgroup_by_free()でフリーを忘れてい
	  た. start_main_i()でvolatileをつけてみた.
	* controller.rb, processor.rb: 接続の切れたprocessorを識別できるよ
	  うにした.
	
Fri Apr 15 18:16:03 2011  Keiju Ishitsuka  <keiju@ishitsuka.com>

	* log.rb: 例外がnilの時の対処をした.

Fri Apr 15 00:19:59 2011  Keiju Ishitsuka  <keiju@ishitsuka.com>

	* xmarshaled-queue.c: メモリリークがあった

Fri Apr  8 21:35:59 2011  Keiju Ishitsuka  <keiju@ishitsuka.com>

	* p-xgroup-by.c: buffering-policyの取得に失敗していた

Thu Apr  7 22:21:09 2011  Keiju Ishitsuka  <keiju@ishitsuka.com>

	* group-by.rb: デバッグメッセージ削除

Thu Apr  7 22:10:37 2011  Keiju Ishitsuka  <keiju@ishitsuka.com>

	* fairy.c, fairy.h: C-API rb_fairy_debug_p2追加, p-group-by.c 追加
	* p-group-by.c: p-xgroup-byから分離.
	* p-xgroup-by.c: p-group-byに分離. 
	* group-by.rb, p-group-by.c, p-xgroup-by.c, conf.rb: group_byをデ
	  フォルトでXGroupByにした.
	* processor.rb, p-task.rb, p-group-by.rb: デバッグメッセージ削除

Tue Apr  5 15:31:50 2011  Keiju Ishitsuka  <keiju@ishitsuka.com>

	* p-xgroup-by.c: rb_xmsb(_store_2ndmemory_sort_b)でhash_procを2度
	  呼び出ししていた.

Mon Apr  4 22:07:48 2011  Keiju Ishitsuka  <keiju@ishitsuka.com>

	* p-xgroup-by.c: PXGroupBy::PostFilter,
	  PXGroupBy::MergeSortBuffer, PXGroupBy::CachedBuffer追加(完全版)

Sun Apr  3 22:51:48 2011  Keiju Ishitsuka  <keiju@ishitsuka.com>

	* fairy.h, fairy.c: rb_fairy_*f: 追加(まだ不完全)
	* p-xgroup-by.c: PXGroupBy::PostFilter,
	  PXGroupBy::MergeSortBuffer, PXGroupBy::CachedBuffer追加(まだ不完全)
	* group-by.rb, c-group-by.rb, p-group-by.rb: 上記の対応に伴う変更
	* string-buffer.c: 初期化, 型の不一致等の修正

Fri Apr  1 23:48:56 2011  Keiju Ishitsuka  <keiju@ishitsuka.com>

	* p-xgroup-by.c: [BUG#303]対応
	* block-source.rb: 下記対応がまだ不十分だった...
